Hourly Aggregation Analysis

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -3332,11 +3332,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "70e3d41e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== HOURLY AGGREGATION ANALYSIS ===\n",
+      "Aggregating data by hour...\n",
+      "\n",
+      "=== HOURLY AGGREGATION RESULTS ===\n",
+      "Shape: (7, 14)\n",
+      "   hour  avg_price  min_price  max_price  price_std  open_price  close_price  \\\n",
+      "0     9     388.60     385.60     390.20       1.13      386.85       388.30   \n",
+      "1    10     388.23     387.45     389.25       0.39      388.10       388.10   \n",
+      "2    11     386.51     385.25     388.05       0.65      388.00       385.55   \n",
+      "3    12     385.22     384.40     386.50       0.44      385.70       385.40   \n",
+      "4    13     384.43     383.50     385.60       0.49      385.55       384.75   \n",
+      "5    14     385.97     384.70     387.10       0.63      384.70       387.05   \n",
+      "6    15     387.92     387.00     388.75       0.46      387.35       388.25   \n",
+      "\n",
+      "   total_qty  trade_count   total_trnvr  avg_price_change  price_change_std  \\\n",
+      "0    2164111         1047  8.408010e+08               0.0              0.12   \n",
+      "1    1436774         1476  5.577489e+08              -0.0              0.09   \n",
+      "2    1340606         1653  5.181887e+08              -0.0              0.09   \n",
+      "3    1462840         1807  5.634822e+08              -0.0              0.08   \n",
+      "4    1428015         1679  5.489793e+08              -0.0              0.07   \n",
+      "5    1985212         1521  7.664167e+08               0.0              0.08   \n",
+      "6    1692613         1773  6.563524e+08               0.0              0.06   \n",
+      "\n",
+      "   min_price_change  max_price_change  \n",
+      "0             -0.65              0.75  \n",
+      "1             -0.35              0.45  \n",
+      "2             -0.35              0.35  \n",
+      "3             -0.30              0.30  \n",
+      "4             -0.45              0.40  \n",
+      "5             -0.45              0.50  \n",
+      "6             -0.40              0.30  \n",
+      "\n",
+      "=== VOLUME ANALYSIS BY HOUR ===\n",
+      "Highest volume hour:\n",
+      "  Hour: 09:00 - 09:59\n",
+      "  Volume: 2,164,111.0\n",
+      "  Turnover: ₹840,800,983.15\n",
+      "  Average price: ₹388.60\n",
+      "\n",
+      "Lowest volume hour:\n",
+      "  Hour: 11:00 - 11:59\n",
+      "  Volume: 1,340,606.0\n",
+      "  Turnover: ₹518,188,746.40\n",
+      "  Average price: ₹386.51\n",
+      "\n",
+      "=== VOLATILITY ANALYSIS BY HOUR ===\n",
+      "Highest volatility hour: 09:00\n",
+      "  Price standard deviation: ₹1.13\n",
+      "  Price range: ₹385.60 - ₹390.20\n",
+      "\n",
+      "=== SUMMARY STATISTICS ===\n",
+      "Total trading hours: 7\n",
+      "Average hourly volume: 1,644,310\n",
+      "Average hourly turnover: ₹635,995,587.39\n",
+      "Average hourly price volatility: ₹0.60\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Aggregate per hour: price volatility, volume, turnover\n",
+    "print(\"=== HOURLY AGGREGATION ANALYSIS ===\")\n",
+    "\n",
+    "# Create hourly aggregation\n",
+    "print(\"Aggregating data by hour...\")\n",
+    "\n",
+    "# Extract hour from datetime for grouping\n",
+    "df['hour_key'] = df['date'].dt.hour\n",
+    "\n",
+    "# Group by hour and aggregate\n",
+    "hourly_agg = df.groupby('hour_key').agg({\n",
+    "    'price': ['mean', 'min', 'max', 'std', 'first', 'last'],  # Price statistics including volatility\n",
+    "    'qty': ['sum', 'count'],                                   # Total volume and trade count\n",
+    "    'trnvr': 'sum',                                            # Total turnover\n",
+    "    'price_change': ['mean', 'std', 'min', 'max']              # Price change statistics\n",
+    "}).round(2)\n",
+    "\n",
+    "# Flatten column names\n",
+    "hourly_agg.columns = [\n",
+    "    'avg_price', 'min_price', 'max_price', 'price_std', 'open_price', 'close_price',\n",
+    "    'total_qty', 'trade_count', 'total_trnvr',\n",
+    "    'avg_price_change', 'price_change_std', 'min_price_change', 'max_price_change'\n",
+    "]\n",
+    "\n",
+    "# Reset index to make hour_key a column\n",
+    "hourly_agg = hourly_agg.reset_index()\n",
+    "hourly_agg.rename(columns={'hour_key': 'hour'}, inplace=True)\n",
+    "\n",
+    "# Display the hourly aggregation\n",
+    "print(f\"\\n=== HOURLY AGGREGATION RESULTS ===\")\n",
+    "print(f\"Shape: {hourly_agg.shape}\")\n",
+    "print(hourly_agg)\n",
+    "\n",
+    "# Find highest and lowest volume hours\n",
+    "print(f\"\\n=== VOLUME ANALYSIS BY HOUR ===\")\n",
+    "highest_volume_hour = hourly_agg.loc[hourly_agg['total_qty'].idxmax()]\n",
+    "lowest_volume_hour = hourly_agg.loc[hourly_agg['total_qty'].idxmin()]\n",
+    "\n",
+    "print(\"Highest volume hour:\")\n",
+    "print(f\"  Hour: {int(highest_volume_hour['hour']):02d}:00 - {int(highest_volume_hour['hour']):02d}:59\")\n",
+    "print(f\"  Volume: {highest_volume_hour['total_qty']:,}\")\n",
+    "print(f\"  Turnover: ₹{highest_volume_hour['total_trnvr']:,.2f}\")\n",
+    "print(f\"  Average price: ₹{highest_volume_hour['avg_price']:.2f}\")\n",
+    "\n",
+    "print(\"\\nLowest volume hour:\")\n",
+    "print(f\"  Hour: {int(lowest_volume_hour['hour']):02d}:00 - {int(lowest_volume_hour['hour']):02d}:59\")\n",
+    "print(f\"  Volume: {lowest_volume_hour['total_qty']:,}\")\n",
+    "print(f\"  Turnover: ₹{lowest_volume_hour['total_trnvr']:,.2f}\")\n",
+    "print(f\"  Average price: ₹{lowest_volume_hour['avg_price']:.2f}\")\n",
+    "\n",
+    "# Volatility analysis by hour\n",
+    "print(f\"\\n=== VOLATILITY ANALYSIS BY HOUR ===\")\n",
+    "highest_volatility_hour = hourly_agg.loc[hourly_agg['price_std'].idxmax()]\n",
+    "print(f\"Highest volatility hour: {int(highest_volatility_hour['hour']):02d}:00\")\n",
+    "print(f\"  Price standard deviation: ₹{highest_volatility_hour['price_std']:.2f}\")\n",
+    "print(f\"  Price range: ₹{highest_volatility_hour['min_price']:.2f} - ₹{highest_volatility_hour['max_price']:.2f}\")\n",
+    "\n",
+    "# Summary statistics\n",
+    "print(f\"\\n=== SUMMARY STATISTICS ===\")\n",
+    "print(f\"Total trading hours: {len(hourly_agg)}\")\n",
+    "print(f\"Average hourly volume: {hourly_agg['total_qty'].mean():,.0f}\")\n",
+    "print(f\"Average hourly turnover: ₹{hourly_agg['total_trnvr'].mean():,.2f}\")\n",
+    "print(f\"Average hourly price volatility: ₹{hourly_agg['price_std'].mean():.2f}\")"
+   ]
   },
   {
    "cell_type": "code",
