Session wise analysis

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -3466,11 +3466,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "15b204f7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== TRADING SESSION OHLC ANALYSIS ===\n",
+      "Aggregating data by trading session...\n",
+      "=== SINGLE TRADING SESSION OHLC ===\n",
+      "Date: 2025-08-07\n",
+      "Open: ₹386.85\n",
+      "High: ₹390.20\n",
+      "Low: ₹383.50\n",
+      "Close: ₹388.25\n",
+      "Price Range: ₹6.70\n",
+      "Total Volume: 11,510,171\n",
+      "Total Turnover: ₹4,451,969,111.70\n",
+      "Trade Count: 10,956\n",
+      "Average Price: ₹386.56\n",
+      "\n",
+      "=== ADDITIONAL METRICS ===\n",
+      "Price Change: ₹1.40\n",
+      "Price Change %: 0.36%\n",
+      "Session VWAP: ₹386.79\n",
+      "\n",
+      "=== COMPLETE SESSION DATA ===\n",
+      "         date    open   high    low   close  total_volume  total_turnover  \\\n",
+      "0  2025-08-07  386.85  390.2  383.5  388.25      11510171    4.451969e+09   \n",
+      "\n",
+      "   trade_count  price_range   avg_price  price_change  price_change_pct  \n",
+      "0        10956          6.7  386.561094           1.4          0.361897  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Aggregate per trading session: OHLC + total volume\n",
+    "print(\"=== TRADING SESSION OHLC ANALYSIS ===\")\n",
+    "\n",
+    "# Create trading session aggregation (assuming single day data)\n",
+    "print(\"Aggregating data by trading session...\")\n",
+    "\n",
+    "# For single day data, we can create session-level OHLC\n",
+    "# If you have multiple days, you can group by date_only instead\n",
+    "if len(df['date_only'].unique()) == 1:\n",
+    "    # Single trading day - create session OHLC\n",
+    "    session_ohlc = {\n",
+    "        'date': df['date_only'].iloc[0],\n",
+    "        'open': df['price'].iloc[0],           # First price of the day\n",
+    "        'high': df['price'].max(),             # Highest price of the day\n",
+    "        'low': df['price'].min(),              # Lowest price of the day\n",
+    "        'close': df['price'].iloc[-1],         # Last price of the day\n",
+    "        'total_volume': df['qty'].sum(),       # Total volume for the day\n",
+    "        'total_turnover': df['trnvr'].sum(),   # Total turnover for the day\n",
+    "        'trade_count': len(df),                # Total number of trades\n",
+    "        'price_range': df['price'].max() - df['price'].min(),  # High - Low\n",
+    "        'avg_price': df['price'].mean()        # Average price for the day\n",
+    "    }\n",
+    "    \n",
+    "    # Create DataFrame from the session data\n",
+    "    session_df = pd.DataFrame([session_ohlc])\n",
+    "    \n",
+    "    print(f\"=== SINGLE TRADING SESSION OHLC ===\")\n",
+    "    print(f\"Date: {session_df['date'].iloc[0]}\")\n",
+    "    print(f\"Open: ₹{session_df['open'].iloc[0]:.2f}\")\n",
+    "    print(f\"High: ₹{session_df['high'].iloc[0]:.2f}\")\n",
+    "    print(f\"Low: ₹{session_df['low'].iloc[0]:.2f}\")\n",
+    "    print(f\"Close: ₹{session_df['close'].iloc[0]:.2f}\")\n",
+    "    print(f\"Price Range: ₹{session_df['price_range'].iloc[0]:.2f}\")\n",
+    "    print(f\"Total Volume: {session_df['total_volume'].iloc[0]:,}\")\n",
+    "    print(f\"Total Turnover: ₹{session_df['total_turnover'].iloc[0]:,.2f}\")\n",
+    "    print(f\"Trade Count: {session_df['trade_count'].iloc[0]:,}\")\n",
+    "    print(f\"Average Price: ₹{session_df['avg_price'].iloc[0]:.2f}\")\n",
+    "    \n",
+    "    # Calculate additional metrics\n",
+    "    print(f\"\\n=== ADDITIONAL METRICS ===\")\n",
+    "    session_df['price_change'] = session_df['close'] - session_df['open']\n",
+    "    session_df['price_change_pct'] = (session_df['price_change'] / session_df['open']) * 100\n",
+    "    \n",
+    "    print(f\"Price Change: ₹{session_df['price_change'].iloc[0]:.2f}\")\n",
+    "    print(f\"Price Change %: {session_df['price_change_pct'].iloc[0]:.2f}%\")\n",
+    "    \n",
+    "    # VWAP calculation for the session\n",
+    "    vwap = (df['price'] * df['qty']).sum() / df['qty'].sum()\n",
+    "    print(f\"Session VWAP: ₹{vwap:.2f}\")\n",
+    "    \n",
+    "    # Display the complete session DataFrame\n",
+    "    print(f\"\\n=== COMPLETE SESSION DATA ===\")\n",
+    "    print(session_df)\n",
+    "    \n",
+    "else:\n",
+    "    # Multiple trading days - group by date\n",
+    "    print(\"Multiple trading days detected, grouping by date...\")\n",
+    "    \n",
+    "    # Group by date and create OHLC for each day\n",
+    "    daily_ohlc = df.groupby('date_only').agg({\n",
+    "        'price': ['first', 'max', 'min', 'last'],  # OHLC\n",
+    "        'qty': 'sum',                               # Total volume\n",
+    "        'trnvr': 'sum',                             # Total turnover\n",
+    "        'qty': 'count'                              # Trade count\n",
+    "    }).round(2)\n",
+    "    \n",
+    "    # Flatten column names\n",
+    "    daily_ohlc.columns = ['open', 'high', 'low', 'close', 'total_volume', 'total_turnover', 'trade_count']\n",
+    "    \n",
+    "    # Reset index\n",
+    "    daily_ohlc = daily_ohlc.reset_index()\n",
+    "    \n",
+    "    # Calculate additional metrics\n",
+    "    daily_ohlc['price_range'] = daily_ohlc['high'] - daily_ohlc['low']\n",
+    "    daily_ohlc['price_change'] = daily_ohlc['close'] - daily_ohlc['open']\n",
+    "    daily_ohlc['price_change_pct'] = (daily_ohlc['price_change'] / daily_ohlc['open']) * 100\n",
+    "    \n",
+    "    print(f\"\\n=== MULTI-DAY OHLC DATA ===\")\n",
+    "    print(daily_ohlc)"
+   ]
   },
   {
    "cell_type": "code",
