--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -3586,11 +3586,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "465a5193",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== TRADE ACTIVITY DENSITY ANALYSIS ===\n",
+      "Analyzing trade activity density across different time intervals...\n",
+      "\n",
+      "=== MINUTE-BY-MINUTE TRADE COUNT ===\n",
+      "Total minutes with trades: 375\n",
+      "Average trades per minute: 29.2\n",
+      "Max trades in a minute: 116\n",
+      "Min trades in a minute: 9\n",
+      "\n",
+      "=== TOP 10 MOST ACTIVE MINUTES ===\n",
+      "09:15:00: 116 trades\n",
+      "15:09:00: 108 trades\n",
+      "09:22:00: 105 trades\n",
+      "15:23:00: 98 trades\n",
+      "09:19:00: 96 trades\n",
+      "15:26:00: 96 trades\n",
+      "09:16:00: 94 trades\n",
+      "09:21:00: 94 trades\n",
+      "15:17:00: 94 trades\n",
+      "12:49:00: 93 trades\n",
+      "\n",
+      "=== 5-MINUTE INTERVAL TRADE COUNT ===\n",
+      "Total 5-minute intervals: 75\n",
+      "Average trades per 5-min: 146.1\n",
+      "Max trades in 5-min: 383\n",
+      "\n",
+      "=== 15-MINUTE INTERVAL TRADE COUNT ===\n",
+      "Total 15-minute intervals: 25\n",
+      "Average trades per 15-min: 438.2\n",
+      "Max trades in 15-min: 971\n",
+      "\n",
+      "=== HOURLY TRADE COUNT ===\n",
+      "Total trading hours: 7\n",
+      "Average trades per hour: 1565.1\n",
+      "Max trades in an hour: 1807\n",
+      "\n",
+      "=== HOURLY BREAKDOWN ===\n",
+      "09:00-09:59: 1,047 trades\n",
+      "10:00-10:59: 1,476 trades\n",
+      "11:00-11:59: 1,653 trades\n",
+      "12:00-12:59: 1,807 trades\n",
+      "13:00-13:59: 1,679 trades\n",
+      "14:00-14:59: 1,521 trades\n",
+      "15:00-15:59: 1,773 trades\n",
+      "\n",
+      "=== ACTIVITY DENSITY ANALYSIS ===\n",
+      "Peak activity minute: 09:15:00 (116 trades)\n",
+      "Peak activity 5-min: 15:20:00 (383 trades)\n",
+      "Peak activity 15-min: 15:15:00 (971 trades)\n",
+      "Peak activity hour: 12:00-12:59 (1,807 trades)\n",
+      "\n",
+      "=== QUIET PERIODS ANALYSIS ===\n",
+      "Minutes with minimum activity (9 trades):\n",
+      "  09:33:00\n",
+      "  09:35:00\n",
+      "\n",
+      "=== SUMMARY STATISTICS ===\n",
+      "Total trades: 10,956\n",
+      "Total active minutes: 375\n",
+      "Total trading hours: 7\n",
+      "Average trades per minute: 29.2\n",
+      "Average trades per hour: 1565.1\n",
+      "\n",
+      "=== SAMPLE MINUTE-BY-MINUTE DATA (First 10 rows) ===\n",
+      "           minute_key  trade_count      time\n",
+      "0 2025-08-07 09:15:00          116  09:15:00\n",
+      "1 2025-08-07 09:16:00           94  09:16:00\n",
+      "2 2025-08-07 09:17:00           15  09:17:00\n",
+      "3 2025-08-07 09:18:00           14  09:18:00\n",
+      "4 2025-08-07 09:19:00           96  09:19:00\n",
+      "5 2025-08-07 09:20:00           13  09:20:00\n",
+      "6 2025-08-07 09:21:00           94  09:21:00\n",
+      "7 2025-08-07 09:22:00          105  09:22:00\n",
+      "8 2025-08-07 09:23:00           14  09:23:00\n",
+      "9 2025-08-07 09:24:00           15  09:24:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count trades per time interval (activity density)\n",
+    "print(\"=== TRADE ACTIVITY DENSITY ANALYSIS ===\")\n",
+    "\n",
+    "# Create different time intervals for analysis\n",
+    "print(\"Analyzing trade activity density across different time intervals...\")\n",
+    "\n",
+    "# 1. Minute-by-minute trade count\n",
+    "print(\"\\n=== MINUTE-BY-MINUTE TRADE COUNT ===\")\n",
+    "df['minute_key'] = df['date'].dt.floor('1min')\n",
+    "minute_trades = df.groupby('minute_key').size().reset_index(name='trade_count')\n",
+    "minute_trades['time'] = minute_trades['minute_key'].dt.time\n",
+    "\n",
+    "print(f\"Total minutes with trades: {len(minute_trades)}\")\n",
+    "print(f\"Average trades per minute: {minute_trades['trade_count'].mean():.1f}\")\n",
+    "print(f\"Max trades in a minute: {minute_trades['trade_count'].max()}\")\n",
+    "print(f\"Min trades in a minute: {minute_trades['trade_count'].min()}\")\n",
+    "\n",
+    "# Display top 10 most active minutes\n",
+    "print(f\"\\n=== TOP 10 MOST ACTIVE MINUTES ===\")\n",
+    "top_active_minutes = minute_trades.nlargest(10, 'trade_count')\n",
+    "for idx, row in top_active_minutes.iterrows():\n",
+    "    print(f\"{row['time']}: {row['trade_count']} trades\")\n",
+    "\n",
+    "# 2. 5-minute interval trade count\n",
+    "print(f\"\\n=== 5-MINUTE INTERVAL TRADE COUNT ===\")\n",
+    "df['five_min_key'] = df['date'].dt.floor('5min')\n",
+    "five_min_trades = df.groupby('five_min_key').size().reset_index(name='trade_count')\n",
+    "five_min_trades['time'] = five_min_trades['five_min_key'].dt.time\n",
+    "\n",
+    "print(f\"Total 5-minute intervals: {len(five_min_trades)}\")\n",
+    "print(f\"Average trades per 5-min: {five_min_trades['trade_count'].mean():.1f}\")\n",
+    "print(f\"Max trades in 5-min: {five_min_trades['trade_count'].max()}\")\n",
+    "\n",
+    "# 3. 15-minute interval trade count\n",
+    "print(f\"\\n=== 15-MINUTE INTERVAL TRADE COUNT ===\")\n",
+    "df['fifteen_min_key'] = df['date'].dt.floor('15min')\n",
+    "fifteen_min_trades = df.groupby('fifteen_min_key').size().reset_index(name='trade_count')\n",
+    "fifteen_min_trades['time'] = fifteen_min_trades['fifteen_min_key'].dt.time\n",
+    "\n",
+    "print(f\"Total 15-minute intervals: {len(fifteen_min_trades)}\")\n",
+    "print(f\"Average trades per 15-min: {fifteen_min_trades['trade_count'].mean():.1f}\")\n",
+    "print(f\"Max trades in 15-min: {fifteen_min_trades['trade_count'].max()}\")\n",
+    "\n",
+    "# 4. Hourly trade count\n",
+    "print(f\"\\n=== HOURLY TRADE COUNT ===\")\n",
+    "df['hour_key'] = df['date'].dt.hour\n",
+    "hourly_trades = df.groupby('hour_key').size().reset_index(name='trade_count')\n",
+    "hourly_trades['time_range'] = hourly_trades['hour_key'].apply(lambda x: f\"{x:02d}:00-{x:02d}:59\")\n",
+    "\n",
+    "print(f\"Total trading hours: {len(hourly_trades)}\")\n",
+    "print(f\"Average trades per hour: {hourly_trades['trade_count'].mean():.1f}\")\n",
+    "print(f\"Max trades in an hour: {hourly_trades['trade_count'].max()}\")\n",
+    "\n",
+    "# Display hourly breakdown\n",
+    "print(f\"\\n=== HOURLY BREAKDOWN ===\")\n",
+    "for idx, row in hourly_trades.iterrows():\n",
+    "    print(f\"{row['time_range']}: {row['trade_count']:,} trades\")\n",
+    "\n",
+    "# 5. Activity density analysis\n",
+    "print(f\"\\n=== ACTIVITY DENSITY ANALYSIS ===\")\n",
+    "\n",
+    "# Find peak activity periods\n",
+    "peak_minute = minute_trades.loc[minute_trades['trade_count'].idxmax()]\n",
+    "peak_five_min = five_min_trades.loc[five_min_trades['trade_count'].idxmax()]\n",
+    "peak_fifteen_min = fifteen_min_trades.loc[fifteen_min_trades['trade_count'].idxmax()]\n",
+    "peak_hour = hourly_trades.loc[hourly_trades['trade_count'].idxmax()]\n",
+    "\n",
+    "print(f\"Peak activity minute: {peak_minute['time']} ({peak_minute['trade_count']} trades)\")\n",
+    "print(f\"Peak activity 5-min: {peak_five_min['time']} ({peak_five_min['trade_count']} trades)\")\n",
+    "print(f\"Peak activity 15-min: {peak_fifteen_min['time']} ({peak_fifteen_min['trade_count']} trades)\")\n",
+    "print(f\"Peak activity hour: {peak_hour['time_range']} ({peak_hour['trade_count']:,} trades)\")\n",
+    "\n",
+    "# 6. Quiet periods analysis\n",
+    "print(f\"\\n=== QUIET PERIODS ANALYSIS ===\")\n",
+    "quiet_minutes = minute_trades[minute_trades['trade_count'] == minute_trades['trade_count'].min()]\n",
+    "print(f\"Minutes with minimum activity ({minute_trades['trade_count'].min()} trades):\")\n",
+    "for idx, row in quiet_minutes.head(5).iterrows():\n",
+    "    print(f\"  {row['time']}\")\n",
+    "\n",
+    "# 7. Summary statistics\n",
+    "print(f\"\\n=== SUMMARY STATISTICS ===\")\n",
+    "total_trades = len(df)\n",
+    "total_minutes = len(minute_trades)\n",
+    "total_hours = len(hourly_trades)\n",
+    "\n",
+    "print(f\"Total trades: {total_trades:,}\")\n",
+    "print(f\"Total active minutes: {total_minutes}\")\n",
+    "print(f\"Total trading hours: {total_hours}\")\n",
+    "print(f\"Average trades per minute: {total_trades/total_minutes:.1f}\")\n",
+    "print(f\"Average trades per hour: {total_trades/total_hours:.1f}\")\n",
+    "\n",
+    "# Display sample of minute-by-minute data\n",
+    "print(f\"\\n=== SAMPLE MINUTE-BY-MINUTE DATA (First 10 rows) ===\")\n",
+    "print(minute_trades.head(10))"
+   ]
   },
   {
    "cell_type": "code",
