--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -3771,8 +3771,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "8f4fbac2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== INTRADAY VOLATILITY ANALYSIS ===\n",
+      "Calculating price volatility across different time intervals...\n",
+      "\n",
+      "=== MINUTE-BY-MINUTE VOLATILITY ===\n",
+      "Total minutes analyzed: 375\n",
+      "Minutes with volatility (multiple trades): 375\n",
+      "Average minute volatility: ₹0.0957\n",
+      "Max minute volatility: ₹0.7306\n",
+      "\n",
+      "=== 5-MINUTE INTERVAL VOLATILITY ===\n",
+      "Total 5-minute intervals: 75\n",
+      "Intervals with volatility: 75\n",
+      "Average 5-min volatility: ₹0.1911\n",
+      "Max 5-min volatility: ₹1.2729\n",
+      "\n",
+      "=== 15-MINUTE INTERVAL VOLATILITY ===\n",
+      "Total 15-minute intervals: 25\n",
+      "Intervals with volatility: 25\n",
+      "Average 15-min volatility: ₹0.3198\n",
+      "Max 15-min volatility: ₹1.3852\n",
+      "\n",
+      "=== HOURLY VOLATILITY ===\n",
+      "Total trading hours: 7\n",
+      "Average hourly volatility: ₹0.5978\n",
+      "Max hourly volatility: ₹1.1315\n",
+      "\n",
+      "=== PEAK VOLATILITY PERIODS ===\n",
+      "Highest minute volatility: 09:16:00 (₹0.7306)\n",
+      "  Price range: ₹385.60 - ₹387.75\n",
+      "  Trades: 94\n",
+      "Highest 5-min volatility: 09:15:00 (₹1.2729)\n",
+      "  Price range: ₹385.60 - ₹389.45\n",
+      "Highest 15-min volatility: 09:15:00 (₹1.3852)\n",
+      "  Price range: ₹385.60 - ₹390.20\n",
+      "Highest hourly volatility: 09:00-09:59 (₹1.1315)\n",
+      "  Price range: ₹385.60 - ₹390.20\n",
+      "\n",
+      "=== VOLATILITY DISTRIBUTION ANALYSIS ===\n",
+      "Minute volatility percentiles:\n",
+      "  25th percentile: ₹0.0611\n",
+      "  50th percentile: ₹0.0832\n",
+      "  75th percentile: ₹0.1143\n",
+      "  90th percentile: ₹0.1575\n",
+      "  95th percentile: ₹0.1931\n",
+      "  99th percentile: ₹0.2773\n",
+      "\n",
+      "=== SUMMARY STATISTICS ===\n",
+      "Overall price standard deviation: ₹1.5743\n",
+      "Overall price range: ₹6.70\n",
+      "Overall coefficient of variation: 0.41%\n",
+      "\n",
+      "=== SAMPLE MINUTE VOLATILITY DATA (First 10 rows) ===\n",
+      "       time  avg_price  price_std  min_price  max_price  trade_count\n",
+      "0  09:15:00   386.2414     0.2694     385.70     386.95          116\n",
+      "1  09:16:00   387.0718     0.7306     385.60     387.75           94\n",
+      "2  09:17:00   388.0600     0.3531     387.55     388.55           15\n",
+      "3  09:18:00   389.0036     0.2742     388.45     389.45           14\n",
+      "4  09:19:00   389.0891     0.0907     388.80     389.25           96\n",
+      "5  09:20:00   389.1423     0.2465     388.90     389.85           13\n",
+      "6  09:21:00   389.5707     0.1650     389.35     390.05           94\n",
+      "7  09:22:00   389.8905     0.1754     389.50     390.20          105\n",
+      "8  09:23:00   389.5607     0.2419     389.10     389.85           14\n",
+      "9  09:24:00   388.7867     0.1157     388.60     389.00           15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate intraday volatility using standard deviation of price per minute/hour\n",
+    "print(\"=== INTRADAY VOLATILITY ANALYSIS ===\")\n",
+    "\n",
+    "# Calculate volatility at different time intervals\n",
+    "print(\"Calculating price volatility across different time intervals...\")\n",
+    "\n",
+    "# 1. Minute-by-minute volatility\n",
+    "print(\"\\n=== MINUTE-BY-MINUTE VOLATILITY ===\")\n",
+    "df['minute_key'] = df['date'].dt.floor('1min')\n",
+    "minute_volatility = df.groupby('minute_key').agg({\n",
+    "    'price': ['mean', 'std', 'min', 'max', 'count']  # Price statistics including std dev\n",
+    "}).round(4)\n",
+    "\n",
+    "# Flatten column names\n",
+    "minute_volatility.columns = ['avg_price', 'price_std', 'min_price', 'max_price', 'trade_count']\n",
+    "minute_volatility = minute_volatility.reset_index()\n",
+    "minute_volatility['time'] = minute_volatility['minute_key'].dt.time\n",
+    "\n",
+    "# Filter out minutes with only 1 trade (std dev = 0 or NaN)\n",
+    "minute_volatility_filtered = minute_volatility[minute_volatility['trade_count'] > 1]\n",
+    "\n",
+    "print(f\"Total minutes analyzed: {len(minute_volatility)}\")\n",
+    "print(f\"Minutes with volatility (multiple trades): {len(minute_volatility_filtered)}\")\n",
+    "print(f\"Average minute volatility: ₹{minute_volatility_filtered['price_std'].mean():.4f}\")\n",
+    "print(f\"Max minute volatility: ₹{minute_volatility_filtered['price_std'].max():.4f}\")\n",
+    "\n",
+    "# 2. 5-minute interval volatility\n",
+    "print(f\"\\n=== 5-MINUTE INTERVAL VOLATILITY ===\")\n",
+    "df['five_min_key'] = df['date'].dt.floor('5min')\n",
+    "five_min_volatility = df.groupby('five_min_key').agg({\n",
+    "    'price': ['mean', 'std', 'min', 'max', 'count']\n",
+    "}).round(4)\n",
+    "\n",
+    "five_min_volatility.columns = ['avg_price', 'price_std', 'min_price', 'max_price', 'trade_count']\n",
+    "five_min_volatility = five_min_volatility.reset_index()\n",
+    "five_min_volatility['time'] = five_min_volatility['five_min_key'].dt.time\n",
+    "\n",
+    "five_min_filtered = five_min_volatility[five_min_volatility['trade_count'] > 1]\n",
+    "\n",
+    "print(f\"Total 5-minute intervals: {len(five_min_volatility)}\")\n",
+    "print(f\"Intervals with volatility: {len(five_min_filtered)}\")\n",
+    "print(f\"Average 5-min volatility: ₹{five_min_filtered['price_std'].mean():.4f}\")\n",
+    "print(f\"Max 5-min volatility: ₹{five_min_filtered['price_std'].max():.4f}\")\n",
+    "\n",
+    "# 3. 15-minute interval volatility\n",
+    "print(f\"\\n=== 15-MINUTE INTERVAL VOLATILITY ===\")\n",
+    "df['fifteen_min_key'] = df['date'].dt.floor('15min')\n",
+    "fifteen_min_volatility = df.groupby('fifteen_min_key').agg({\n",
+    "    'price': ['mean', 'std', 'min', 'max', 'count']\n",
+    "}).round(4)\n",
+    "\n",
+    "fifteen_min_volatility.columns = ['avg_price', 'price_std', 'min_price', 'max_price', 'trade_count']\n",
+    "fifteen_min_volatility = fifteen_min_volatility.reset_index()\n",
+    "fifteen_min_volatility['time'] = fifteen_min_volatility['fifteen_min_key'].dt.time\n",
+    "\n",
+    "fifteen_min_filtered = fifteen_min_volatility[fifteen_min_volatility['trade_count'] > 1]\n",
+    "\n",
+    "print(f\"Total 15-minute intervals: {len(fifteen_min_volatility)}\")\n",
+    "print(f\"Intervals with volatility: {len(fifteen_min_filtered)}\")\n",
+    "print(f\"Average 15-min volatility: ₹{fifteen_min_volatility['price_std'].mean():.4f}\")\n",
+    "print(f\"Max 15-min volatility: ₹{fifteen_min_volatility['price_std'].max():.4f}\")\n",
+    "\n",
+    "# 4. Hourly volatility\n",
+    "print(f\"\\n=== HOURLY VOLATILITY ===\")\n",
+    "df['hour_key'] = df['date'].dt.hour\n",
+    "hourly_volatility = df.groupby('hour_key').agg({\n",
+    "    'price': ['mean', 'std', 'min', 'max', 'count']\n",
+    "}).round(4)\n",
+    "\n",
+    "hourly_volatility.columns = ['avg_price', 'price_std', 'min_price', 'max_price', 'trade_count']\n",
+    "hourly_volatility = hourly_volatility.reset_index()\n",
+    "hourly_volatility['time_range'] = hourly_volatility['hour_key'].apply(lambda x: f\"{x:02d}:00-{x:02d}:59\")\n",
+    "\n",
+    "print(f\"Total trading hours: {len(hourly_volatility)}\")\n",
+    "print(f\"Average hourly volatility: ₹{hourly_volatility['price_std'].mean():.4f}\")\n",
+    "print(f\"Max hourly volatility: ₹{hourly_volatility['price_std'].max():.4f}\")\n",
+    "\n",
+    "# 5. Peak volatility periods identification\n",
+    "print(f\"\\n=== PEAK VOLATILITY PERIODS ===\")\n",
+    "\n",
+    "# Find highest volatility periods\n",
+    "highest_vol_minute = minute_volatility_filtered.loc[minute_volatility_filtered['price_std'].idxmax()]\n",
+    "highest_vol_five_min = five_min_filtered.loc[five_min_filtered['price_std'].idxmax()]\n",
+    "highest_vol_fifteen_min = fifteen_min_filtered.loc[fifteen_min_filtered['price_std'].idxmax()]\n",
+    "highest_vol_hour = hourly_volatility.loc[hourly_volatility['price_std'].idxmax()]\n",
+    "\n",
+    "print(f\"Highest minute volatility: {highest_vol_minute['time']} (₹{highest_vol_minute['price_std']:.4f})\")\n",
+    "print(f\"  Price range: ₹{highest_vol_minute['min_price']:.2f} - ₹{highest_vol_minute['max_price']:.2f}\")\n",
+    "print(f\"  Trades: {highest_vol_minute['trade_count']}\")\n",
+    "\n",
+    "print(f\"Highest 5-min volatility: {highest_vol_five_min['time']} (₹{highest_vol_five_min['price_std']:.4f})\")\n",
+    "print(f\"  Price range: ₹{highest_vol_five_min['min_price']:.2f} - ₹{highest_vol_five_min['max_price']:.2f}\")\n",
+    "\n",
+    "print(f\"Highest 15-min volatility: {highest_vol_fifteen_min['time']} (₹{highest_vol_fifteen_min['price_std']:.4f})\")\n",
+    "print(f\"  Price range: ₹{highest_vol_fifteen_min['min_price']:.2f} - ₹{highest_vol_fifteen_min['max_price']:.2f}\")\n",
+    "\n",
+    "print(f\"Highest hourly volatility: {highest_vol_hour['time_range']} (₹{highest_vol_hour['price_std']:.4f})\")\n",
+    "print(f\"  Price range: ₹{highest_vol_hour['min_price']:.2f} - ₹{highest_vol_hour['max_price']:.2f}\")\n",
+    "\n",
+    "# 6. Volatility distribution analysis\n",
+    "print(f\"\\n=== VOLATILITY DISTRIBUTION ANALYSIS ===\")\n",
+    "\n",
+    "# Calculate volatility percentiles\n",
+    "volatility_percentiles = minute_volatility_filtered['price_std'].quantile([0.25, 0.5, 0.75, 0.9, 0.95, 0.99])\n",
+    "print(\"Minute volatility percentiles:\")\n",
+    "for p, v in volatility_percentiles.items():\n",
+    "    print(f\"  {p*100:2.0f}th percentile: ₹{v:.4f}\")\n",
+    "\n",
+    "# 7. Summary statistics\n",
+    "print(f\"\\n=== SUMMARY STATISTICS ===\")\n",
+    "print(f\"Overall price standard deviation: ₹{df['price'].std():.4f}\")\n",
+    "print(f\"Overall price range: ₹{df['price'].max() - df['price'].min():.2f}\")\n",
+    "print(f\"Overall coefficient of variation: {(df['price'].std() / df['price'].mean() * 100):.2f}%\")\n",
+    "\n",
+    "# Display sample volatility data\n",
+    "print(f\"\\n=== SAMPLE MINUTE VOLATILITY DATA (First 10 rows) ===\")\n",
+    "print(minute_volatility_filtered[['time', 'avg_price', 'price_std', 'min_price', 'max_price', 'trade_count']].head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82467e96",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3780,7 +3976,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82467e96",
+   "id": "df6a9292",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70d6a4f0",
    "metadata": {},
    "outputs": [],
    "source": []
